added gradient to header

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
     <footer class="footer">
       <section class="contact">
+        <h1 class="footer__h1">Contact</h1>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit
           explicabo voluptate quia inventore nisi sed eveniet ratione cum
