an idea for the header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__h1">VR-something</h1>
-      <figure class="figure__h1">
-        <img
-          src="img/glowing-frame.png"
-          alt="glowing frame"
-          width="500"
-          height="250"
-        />
-      </figure>
+      <div class="header__div">
+        <h1 class="header__h1">VR-something</h1>
+        <figure class="header__figure">
+          <img
+            src="img/glowing-frame.png"
+            alt="glowing frame"
+            width="500"
+            height="250"
+          />
+        </figure>
+      </div>
       <div class="search">search bar</div>
     </header>
 
@@ -30,7 +32,7 @@
           <li><a href="#future">Future</a></li>
         </ul>
       </nav>
-      
+
       <article class="main__article">
         <section class="main__description main--left">
           <h1 class="main__h1">What Is VR?</h1>
@@ -66,12 +68,7 @@
         </section>
         <div class="div__types">
           <figure>
-            <img
-              src="img/girl.png"
-              alt="girl"
-              width="1000"
-              height="500"
-            />
+            <img src="img/girl.png" alt="girl" width="1000" height="500" />
           </figure>
         </div>
       </article>
@@ -90,13 +87,9 @@
         </section>
         <div class="div__education">
           <figure>
-            <img
-              src="img/kid.png"
-              alt="kid"
-              width="500"
-              height="500"
-            />
+            <img src="img/kid.png" alt="kid" width="500" height="500" />
           </figure>
+        </div>
       </article>
 
       <div class="div__transition"></div>
