added infos to the sections

--- a/index.html
+++ b/index.html
@@ -34,13 +34,29 @@
       </nav>
 
       <article class="main__article">
-        <section class="main__description main--left">
+        <section class="main__description">
           <h1 class="main__h1">What Is VR?</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-            officiis eius optio quasi! Quam eaque et deserunt nobis animi
-            ratione ad eveniet. Deserunt numquam laudantium corrupti alias
-            adipisci laborum qui.
+            Virtual Reality is a technology that creates a simulated world using
+            pose tracking and 3D near-eye displays. Users wear a headset that
+            blocks out the real world and immerses them in the virtual
+            environment. They can interact with the virtual world using
+            controllers or body movements, everything they see and hear feeling
+            real. All that can be done without leaving your chair with this
+            technology. Other distinct types of VR-style technology include
+            <a
+              href="https://www.sap.com/romania/products/scm/industry-4-0/what-is-augmented-reality.html#:~:text=Augmented%20reality%20definition,real-life%20environments%20and%20objects."
+              >augmented reality</a
+            >
+            (AR) and
+            <a href="https://en.wikipedia.org/wiki/Mixed_reality"
+              >mixed reality</a
+            >
+            (MR), sometimes referred to as
+            <a href="https://en.wikipedia.org/wiki/Extended_reality"
+              >extended reality</a
+            >
+            (XR).
           </p>
         </section>
         <div class="div__description">
@@ -54,35 +70,48 @@
           </figure>
         </div>
       </article>
+
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__types main--right">
-          <h1 class="main__h1">Types of VR</h1>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex,
-            doloribus facilis tempore nulla eos facere cum deserunt asperiores.
-            Magni ex ipsa illo aliquid architecto, in corrupti ab rerum nisi
-            accusamus.
-          </p>
-        </section>
         <div class="div__types">
           <figure>
             <img src="img/girl.png" alt="girl" width="1000" height="500" />
           </figure>
         </div>
+        <section class="main__types">
+          <h1 class="main__h1">Applications of Virtual Reality</h1>
+          <ul>
+            <li>
+              <a href="#education"
+                >education (such as medical or military training)</a
+              >
+            </li>
+            <li>
+              <a href="#games">entertainment (particularly video games)</a>
+            </li>
+            <li><a href="#meeting">business (such as virtual meetings)</a></li>
+            <li><a href="#tours">tours</a></li>
+          </ul>
+        </section>
       </article>
 
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__education main--left" id="education">
-          <h1 class="main__h1">VR in Education</h1>
+        <section class="main__education" id="education">
+          <h1 class="main__h1">Virtual Reality in Education</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus nemo maxime porro, ipsum amet temporibus deleniti
-            saepe corrupti similique dolor, ratione quia earum molestiae ipsam
-            accusamus numquam nostrum voluptatem exercitationem.
+            VR holds immense potential in education across various subjects. It
+            offers immersive experiences, enabling students to conduct safe
+            experiments and visit virtual museums or locations. In physics,
+            students can simulate gravity effects or explore celestial bodies
+            like the Moon. Engineering students benefit from designing
+            prototypes and visualizing complex scenarios like bridge stress.
+            Primary school students engage with augmented reality (AR) tools to
+            explore STEM concepts or historical settings. VR facilitates
+            collaborative learning and provides historical or futuristic
+            experiences, enhancing educational engagement and understanding.
           </p>
         </section>
         <div class="div__education">
@@ -95,13 +124,22 @@
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__games main--right" id="games">
-          <h1 class="main__h1">VR Games</h1>
+        <section class="main__games" id="games">
+          <h1 class="main__h1">VR in Gaming</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi quod
-            quia consectetur? Quidem necessitatibus nihil magni alias nostrum
-            voluptatem dolore corrupti recusandae veritatis, reprehenderit eaque
-            tempore velit assumenda fugiat neque.
+            Traditional gaming has its charm, but VR is quickly becoming the new
+            standard due to its unparalleled immersion. Instead of just
+            controlling a character on a screen, you're thrust into the heart of
+            the action, exploring captivating worlds and living out thrilling
+            adventures like never before. Developers are breaking free from
+            traditional constraints, crafting richer narratives and pushing
+            technological boundaries. With fewer VR titles available, studios
+            have the chance to innovate, offering fresh experiences. Beyond
+            gaming, VR has real-life benefits. Studies show users feel more
+            confident and outgoing after diving into virtual worlds. And with a
+            growing selection of VR fitness games like Supernatural, staying
+            active has never been more fun. Box to your favorite tunes or find
+            your zen through virtual yoga - all from the comfort of home.
           </p>
         </section>
       </article>
@@ -109,36 +147,99 @@
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__meeting main--left" id="meeting">
+        <section class="main__meeting" id="meeting">
           <h1 class="main__h1">VR Meeting Room</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Necessitatibus corrupti expedita unde facilis distinctio soluta
-            ipsum et nam ad quibusdam perferendis, ratione sapiente perspiciatis
-            voluptates rem sed minus, ex ipsam.
+            Virtual Reality can be utilized for meetings in various ways,
+            offering unique advantages over traditional video conferences:
           </p>
+          <ul class="meeting__ul">
+            <li><strong>Immersive Environment</strong></li>
+            <p class="meeting__p">
+              Enables people to gather in a digital world that feels like real
+              life, making them feel like they're in the same room, even if
+              they're far apart.
+            </p>
+            <li><strong>Avatars and Gestures</strong></li>
+            <p class="meeting__p">
+              People can make avatars that look like them and act like they do
+              in real life, making conversations feel more natural than regular
+              video calls.
+            </p>
+            <li><strong>Enhanced Collaboration</strong></li>
+            <p class="meeting__p">
+              VR platforms offer tools like virtual whiteboards, document
+              sharing, and 3D modeling, allowing people to collaborate on
+              projects and share ideas instantly, no matter where they are.
+            </p>
+            <li><strong>Accessibility and Inclusivity</strong></li>
+            <p class="meeting__p">
+              People with disabilities can easily join because they can use hand
+              gestures or voice commands to interact with the virtual world,
+              adjusting it to suit their preferences.
+            </p>
+            <li><strong>Cost and Time Savings</strong></li>
+            <p class="meeting__p">
+              VR meetings save money and help the environment by avoiding
+              travel, hotels, and venue costs, while also letting people join
+              from anywhere, saving time and offering more flexibility.
+            </p>
+          </ul>
         </section>
       </article>
 
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__tours main--right" id="tours">
+        <section class="main__tours" id="tours">
           <h1 class="main__h1">VR Tours</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos
-            excepturi eius ex nulla blanditiis repellendus dolorum, amet soluta
-            earum porro qui dignissimos reprehenderit, error perspiciatis illo
-            iusto quod enim eligendi!
+            Virtual Reality can be utilized for meetings in various ways,
+            offering unique advantages over traditional video conferences
           </p>
+          <ul>
+            <li><strong>Immersive Environment</strong></li>
+            <p class="tours__p">
+              Enables people to gather in a digital world that feels like real
+              life, making them feel like they're in the same room, even if
+              they're far apart.
+            </p>
+            <li><strong>Avatars and Gestures</strong></li>
+            <p class="tours__p">
+              People can make avatars that look like them and act like they do
+              in real life, making conversations feel more natural than regular
+              video calls.
+            </p>
+            <li><strong>Enhanced Collaboration</strong></li>
+            <p class="tours__p">
+              VR platforms offer tools like virtual whiteboards, document
+              sharing, and 3D modeling, allowing people to collaborate on
+              projects and share ideas instantly, no matter where they are.
+            </p>
+            <li><strong>Accessibility and Inclusivity</strong></li>
+            <p class="tours__p">
+              People with disabilities can easily join because they can use hand
+              gestures or voice commands to interact with the virtual world,
+              adjusting it to suit their preferences.
+            </p>
+            <li><strong>Cost and Time Savings</strong></li>
+            <p class="tours__p">
+              VR meetings save money and help the environment by avoiding
+              travel, hotels, and venue costs, while also letting people join
+              from anywhere, saving time and offering more flexibility.
+            </p>
+          </ul>
         </section>
       </article>
 
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__future main--left" id="future">
+        <section class="main__future" id="future">
           <h1 class="main__h1">Future Of VR</h1>
+          <figure>
+            <img src="/img/chart.png" alt="chart" />
+          </figure>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex odit
             suscipit nemo esse quibusdam a ullam! Maiores labore facilis
