img for tours, meeting and gaming

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Project</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
     <header class="header">
       <div class="header__div">
@@ -90,8 +91,12 @@
             <li>
               <a href="#games">entertainment (particularly video games)</a>
             </li>
-            <li><a href="#meeting">business (such as virtual meetings)</a></li>
-            <li><a href="#tours">tours</a></li>
+            <li>
+              <a href="#tours">tourism</a>
+            </li>
+            <li>
+              <a href="#meeting">business (such as virtual meetings)</a>
+            </li>
           </ul>
         </section>
       </article>
@@ -124,6 +129,14 @@
       <div class="div__transition"></div>
 
       <article class="main__article">
+        <figure>
+          <img
+            src="img/gaming_image.png"
+            alt="image"
+            width="500"
+            height="750"
+          />
+        </figure>
         <section class="main__games" id="games">
           <h1 class="main__h1">VR in Gaming</h1>
           <p>
@@ -147,9 +160,59 @@
       <div class="div__transition"></div>
 
       <article class="main__article">
+        <section class="main__tours" id="tours">
+          <h1 class="main__h1">VR Tours</h1>
+          <p class="tours__p--1">
+            Virtual Reality can be utilized for meetings in various ways,
+            offering unique advantages over traditional video conferences
+          </p>
+          <ul>
+            <li><strong>Immersive Environment</strong></li>
+            <p class="tours__p">
+              Enables people to gather in a digital world that feels like real
+              life, making them feel like they're in the same room, even if
+              they're far apart.
+            </p>
+            <li><strong>Avatars and Gestures</strong></li>
+            <p class="tours__p">
+              People can make avatars that look like them and act like they do
+              in real life, making conversations feel more natural than regular
+              video calls.
+            </p>
+            <li><strong>Enhanced Collaboration</strong></li>
+            <p class="tours__p">
+              VR platforms offer tools like virtual whiteboards, document
+              sharing, and 3D modeling, allowing people to collaborate on
+              projects and share ideas instantly, no matter where they are.
+            </p>
+            <li><strong>Accessibility and Inclusivity</strong></li>
+            <p class="tours__p">
+              People with disabilities can easily join because they can use hand
+              gestures or voice commands to interact with the virtual world,
+              adjusting it to suit their preferences.
+            </p>
+            <li><strong>Cost and Time Savings</strong></li>
+            <p class="tours__p">
+              VR meetings save money and help the environment by avoiding
+              travel, hotels, and venue costs, while also letting people join
+              from anywhere, saving time and offering more flexibility.
+            </p>
+          </ul>
+        </section>
+        <figure>
+          <img src="img/tours.png" alt="tours" width="500" height="500" />
+        </figure>
+      </article>
+
+      <div class="div__transition"></div>
+
+      <article class="main__article">
+        <figure>
+          <img src="img/meeting.png" alt="meeting" width="500" height="500" />
+        </figure>
         <section class="main__meeting" id="meeting">
           <h1 class="main__h1">VR Meeting Room</h1>
-          <p>
+          <p class="meeting__p--1">
             Virtual Reality can be utilized for meetings in various ways,
             offering unique advantages over traditional video conferences:
           </p>
@@ -191,54 +254,16 @@
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <section class="main__tours" id="tours">
-          <h1 class="main__h1">VR Tours</h1>
-          <p>
-            Virtual Reality can be utilized for meetings in various ways,
-            offering unique advantages over traditional video conferences
-          </p>
-          <ul>
-            <li><strong>Immersive Environment</strong></li>
-            <p class="tours__p">
-              Enables people to gather in a digital world that feels like real
-              life, making them feel like they're in the same room, even if
-              they're far apart.
-            </p>
-            <li><strong>Avatars and Gestures</strong></li>
-            <p class="tours__p">
-              People can make avatars that look like them and act like they do
-              in real life, making conversations feel more natural than regular
-              video calls.
-            </p>
-            <li><strong>Enhanced Collaboration</strong></li>
-            <p class="tours__p">
-              VR platforms offer tools like virtual whiteboards, document
-              sharing, and 3D modeling, allowing people to collaborate on
-              projects and share ideas instantly, no matter where they are.
-            </p>
-            <li><strong>Accessibility and Inclusivity</strong></li>
-            <p class="tours__p">
-              People with disabilities can easily join because they can use hand
-              gestures or voice commands to interact with the virtual world,
-              adjusting it to suit their preferences.
-            </p>
-            <li><strong>Cost and Time Savings</strong></li>
-            <p class="tours__p">
-              VR meetings save money and help the environment by avoiding
-              travel, hotels, and venue costs, while also letting people join
-              from anywhere, saving time and offering more flexibility.
-            </p>
-          </ul>
-        </section>
-      </article>
-
-      <div class="div__transition"></div>
-
-      <article class="main__article">
         <section class="main__future" id="future">
           <h1 class="main__h1">Future Of VR</h1>
           <figure>
-            <img src="/img/chart.png" alt="chart" />
+            <img
+              src="/img/chart.png"
+              alt="chart"
+              width="500"
+              height="500"
+              class="img--chart"
+            />
           </figure>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex odit
