--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="header__div">
-        <h1 class="header__h1">VR-something</h1>
+        <h1 class="header__h1">Virtual Reality</h1>
         <figure class="header__figure">
           <img
             src="img/glowing-frame.png"
@@ -26,18 +26,20 @@
     <main class="main">
       <nav class="main__nav">
         <ul class="main__ul">
-          <li><a href="#education">Education</a></li>
-          <li><a href="#games">Games</a></li>
-          <li><a href="#meeting">Meetings</a></li>
-          <li><a href="#tours">Tours</a></li>
-          <li><a href="#future">Future</a></li>
+          <li><a href="#education" class="a--nav">Education</a></li>
+          <li><a href="#games" class="a--nav">Games</a></li>
+          <li><a href="#meeting" class="a--nav">Meetings</a></li>
+          <li><a href="#tours" class="a--nav">Tours</a></li>
+          <li><a href="#future" class="a--nav">Future</a></li>
         </ul>
       </nav>
 
       <article class="main__article">
         <section class="main__description">
-          <h1 class="main__h1">What Is VR?</h1>
-          <p>
+          <div class="div__h2">
+            <h2 class="main__h2">What Is VR?</h2>
+          </div>
+          <p class="description--p">
             Virtual Reality is a technology that creates a simulated world using
             pose tracking and 3D near-eye displays. Users wear a headset that
             blocks out the real world and immerses them in the virtual
@@ -81,21 +83,22 @@
           </figure>
         </div>
         <section class="main__types">
-          <h1 class="main__h1">Applications of Virtual Reality</h1>
+          <div class="div__h2">
+            <h2 class="main__h2">Applications of Virtual Reality</h2>
+          </div>
           <ul>
-            <li>
-              <a href="#education"
-                >education (such as medical or military training)</a
-              >
+            <li class="li--types">
+              <a href="#education">Education</a> (such as medical or military
+              training)
             </li>
-            <li>
-              <a href="#games">entertainment (particularly video games)</a>
+            <li class="li--types">
+              <a href="#games">Entertainment</a> (particularly video games)
             </li>
-            <li>
-              <a href="#tours">tourism</a>
+            <li class="li--types">
+              <a href="#tours">Tourism</a>
             </li>
-            <li>
-              <a href="#meeting">business (such as virtual meetings)</a>
+            <li class="li--types">
+              <a href="#meeting">Business</a> (such as virtual meetings)
             </li>
           </ul>
         </section>
@@ -105,7 +108,9 @@
 
       <article class="main__article">
         <section class="main__education" id="education">
-          <h1 class="main__h1">Virtual Reality in Education</h1>
+          <div class="div__h2">
+            <h2 class="main__h2">Virtual Reality in Education</h2>
+          </div>
           <p>
             VR holds immense potential in education across various subjects. It
             offers immersive experiences, enabling students to conduct safe
@@ -129,16 +134,20 @@
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <figure>
-          <img
-            src="img/gaming_image.png"
-            alt="image"
-            width="500"
-            height="750"
-          />
-        </figure>
+        <div class="div__gaming">
+          <figure>
+            <img
+              src="img/gaming_image.png"
+              alt="image"
+              width="500"
+              height="750"
+            />
+          </figure>
+        </div>
         <section class="main__games" id="games">
-          <h1 class="main__h1">VR in Gaming</h1>
+          <div class="div__h2">
+            <h2 class="main__h2">Virtual Reality in Gaming</h2>
+          </div>
           <p>
             Traditional gaming has its charm, but VR is quickly becoming the new
             standard due to its unparalleled immersion. Instead of just
@@ -161,88 +170,98 @@
 
       <article class="main__article">
         <section class="main__tours" id="tours">
-          <h1 class="main__h1">VR Tours</h1>
-          <p class="tours__p--1">
-            Virtual Reality can be utilized for meetings in various ways,
-            offering unique advantages over traditional video conferences
-          </p>
+          <div class="div__h2">
+            <h2 class="main__h2">Virtual Reality in Tourism</h2>
+          </div>
           <ul>
-            <li><strong>Immersive Environment</strong></li>
-            <p class="tours__p">
+            <li>
+              <strong><h3>Immersive Environment</h3></strong>
+            </li>
+            <p class="tours--p">
               Enables people to gather in a digital world that feels like real
               life, making them feel like they're in the same room, even if
               they're far apart.
             </p>
-            <li><strong>Avatars and Gestures</strong></li>
-            <p class="tours__p">
+            <li>
+              <strong><h3>Avatars and Gestures</h3></strong>
+            </li>
+            <p class="tours--p">
               People can make avatars that look like them and act like they do
               in real life, making conversations feel more natural than regular
               video calls.
             </p>
-            <li><strong>Enhanced Collaboration</strong></li>
-            <p class="tours__p">
+            <li>
+              <strong><h3>Enhanced Collaboration</h3></strong>
+            </li>
+            <p class="tours--p">
               VR platforms offer tools like virtual whiteboards, document
               sharing, and 3D modeling, allowing people to collaborate on
               projects and share ideas instantly, no matter where they are.
             </p>
-            <li><strong>Accessibility and Inclusivity</strong></li>
-            <p class="tours__p">
+            <li>
+              <strong><h3>Accessibility and Inclusivity</h3></strong>
+            </li>
+            <p class="tours--p">
               People with disabilities can easily join because they can use hand
               gestures or voice commands to interact with the virtual world,
               adjusting it to suit their preferences.
             </p>
-            <li><strong>Cost and Time Savings</strong></li>
-            <p class="tours__p">
+            <li>
+              <strong><h3>Cost and Time Savings</h3></strong>
+            </li>
+            <p class="tours--p">
               VR meetings save money and help the environment by avoiding
               travel, hotels, and venue costs, while also letting people join
               from anywhere, saving time and offering more flexibility.
             </p>
           </ul>
         </section>
-        <figure>
-          <img src="img/tours.png" alt="tours" width="500" height="500" />
-        </figure>
+        <div class="div__tours">
+          <figure>
+            <img src="img/tours.png" alt="tours" width="500" height="500" />
+          </figure>
+        </div>
       </article>
 
       <div class="div__transition"></div>
 
       <article class="main__article">
-        <figure>
-          <img src="img/meeting.png" alt="meeting" width="500" height="500" />
-        </figure>
+        <div class="div__meeting">
+          <figure>
+            <img src="img/meeting.png" alt="meeting" width="500" height="500" />
+          </figure>
+        </div>
         <section class="main__meeting" id="meeting">
-          <h1 class="main__h1">VR Meeting Room</h1>
-          <p class="meeting__p--1">
-            Virtual Reality can be utilized for meetings in various ways,
-            offering unique advantages over traditional video conferences:
-          </p>
+          <div class="div__h2">
+            <h2 class="main__h2">Virtual Reality for Meeting Rooms</h2>
+          </div>
           <ul class="meeting__ul">
             <li><strong>Immersive Environment</strong></li>
-            <p class="meeting__p">
+            <p class="meeting--p">
               Enables people to gather in a digital world that feels like real
               life, making them feel like they're in the same room, even if
               they're far apart.
             </p>
             <li><strong>Avatars and Gestures</strong></li>
-            <p class="meeting__p">
+            <p class="meeting--p">
               People can make avatars that look like them and act like they do
               in real life, making conversations feel more natural than regular
               video calls.
             </p>
             <li><strong>Enhanced Collaboration</strong></li>
-            <p class="meeting__p">
+            <p class="meeting--p">
               VR platforms offer tools like virtual whiteboards, document
               sharing, and 3D modeling, allowing people to collaborate on
               projects and share ideas instantly, no matter where they are.
             </p>
             <li><strong>Accessibility and Inclusivity</strong></li>
-            <p class="meeting__p">
+            <p class="meeting--p">
               People with disabilities can easily join because they can use hand
               gestures or voice commands to interact with the virtual world,
               adjusting it to suit their preferences.
             </p>
             <li><strong>Cost and Time Savings</strong></li>
-            <p class="meeting__p">
+            <p class="meeting--p">
               VR meetings save money and help the environment by avoiding
               travel, hotels, and venue costs, while also letting people join
               from anywhere, saving time and offering more flexibility.
@@ -253,9 +272,8 @@
 
       <div class="div__transition"></div>
 
-      <article class="main__article">
-        <section class="main__future" id="future">
-          <h1 class="main__h1">Future Of VR</h1>
+      <article class="main__article main__article--last">
+        <div class="div__future">
           <figure>
             <img
               src="/img/chart.png"
@@ -265,6 +283,9 @@
               class="img--chart"
             />
           </figure>
+        </div>
+        <section class="main__future" id="future">
+          <h2 class="main__h2">Future Of VR</h2>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex odit
             suscipit nemo esse quibusdam a ullam! Maiores labore facilis
@@ -281,7 +302,7 @@
 
     <footer class="footer">
       <section class="contact">
-        <h1 class="footer__h1">Contact</h1>
+        <h2 class="footer__h2">Contact</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit
           explicabo voluptate quia inventore nisi sed eveniet ratione cum
