--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
                 Data Source: Goldman Sachs Global Investment Research, Image ©
                 <a
                   href="https://www.statista.com/chart/4602/virtual-and-augmented-reality-software-revenue/"
-                  target="_blank" class="chart--caption"
+                  target="_blank"
+                  class="chart--caption"
                   >Statista</a
                 >
               </p>
@@ -346,52 +347,43 @@
     <footer class="footer">
       <section class="contact">
         <h2 class="footer__h2">Contact</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit
-          explicabo voluptate quia inventore nisi sed eveniet ratione cum
-          repellendus numquam totam dolorum nihil veniam aliquam, vitae
-          architecto corrupti accusamus dicta?
-        </p>
+        <p>...</p>
       </section>
 
+      <p class="p--back"><a href="#">Back to top</a></p>
+
       <section class="social">
-        <div class="color"></div>
-        <div class="color"></div>
-        <div class="color"></div>
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </li>
 
-        <nav>
-          <ul class="social-list">
-            <li class="social-item">
-              <a href="#" class="social-link">
-                <i class="fa-brands fa-facebook"></i>
-              </a>
-            </li>
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </li>
 
-            <li class="social-item">
-              <a href="#" class="social-link">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-            </li>
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+          </li>
 
-            <li class="social-item">
-              <a href="#" class="social-link">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </a>
-            </li>
+          <li class="social-item">
+            <a href="https://github.com/M4kn" class="social-link">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
 
-            <li class="social-item">
-              <a href="#" class="social-link">
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </li>
-
-            <li class="social-item">
-              <a href="#" class="social-link">
-                <i class="fa-brands fa-whatsapp"></i>
-              </a>
-            </li>
-          </ul>
-        </nav>
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+          </li>
+        </ul>
       </section>
     </footer>
   </body>
