--- a/index.html
+++ b/index.html
@@ -39,15 +39,11 @@
       </nav>
 
       <article class="main__article">
-        <section class="main__description">
-          <!--           <img
-            src="img/11698.png"
-            alt="bg"
-            width="500"
-            height="500"
-            class="description--img"
-          /> -->
+          <div class="color"></div>
+          <div class="color"></div>
+          <div class="color"></div>
 
+        <section class="main__description">
           <div class="div__h2">
             <h2 class="main__h2">What Is Virtual Reality?</h2>
           </div>
@@ -92,9 +88,12 @@
         </div>
       </article>
 
-      <div class="div__transition"></div>
 
+      <div class="div__transition"></div>
+      
       <article class="main__article">
+
+        
         <div class="div__types">
           <figure>
             <img src="img/girl.png" alt="girl" width="1000" height="500" />
@@ -355,31 +354,35 @@
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="social-link" target="_blank">
               <i class="fa-brands fa-facebook"></i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="social-link" target="_blank">
               <i class="fa-brands fa-instagram"></i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="social-link" target="_blank">
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://github.com/M4kn" class="social-link">
+            <a
+              href="https://github.com/M4kn"
+              class="social-link"
+              target="_blank"
+            >
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="social-link" target="_blank">
               <i class="fa-brands fa-whatsapp"></i>
             </a>
           </li>
