--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </nav>
 
       <article class="main__article">
-          <div class="color"></div>
-          <div class="color"></div>
-          <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
 
         <section class="main__description">
           <div class="div__h2">
@@ -88,12 +88,9 @@
         </div>
       </article>
 
-
       <div class="div__transition"></div>
-      
-      <article class="main__article">
 
-        
+      <article class="main__article">
         <div class="div__types">
           <figure>
             <img src="img/girl.png" alt="girl" width="1000" height="500" />
@@ -136,9 +133,13 @@
             like the Moon. Engineering students benefit from designing
             prototypes and visualizing complex scenarios like bridge stress.
             Primary school students engage with augmented reality (AR) tools to
-            explore STEM concepts or historical settings. VR facilitates
-            collaborative learning and provides historical or futuristic
-            experiences, enhancing educational engagement and understanding.
+            explore
+            <abbr title="Science, technology, engineering, and mathematics"
+              >STEM</abbr
+            >
+            concepts or historical settings. VR facilitates collaborative
+            learning and provides historical or futuristic experiences,
+            enhancing educational engagement and understanding.
           </p>
         </section>
         <div class="div__education">
@@ -337,36 +338,29 @@
           </p>
         </section>
       </article>
-
-      <div class="div__transition"></div>
     </main>
 
     <br />
 
     <footer class="footer">
-      <section class="contact">
-        <h2 class="footer__h2">Contact</h2>
-        <p>...</p>
-      </section>
-
       <p class="p--back"><a href="#">Back to top</a></p>
 
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
-            <a href="#" class="social-link" target="_blank">
+            <a href="#" class="social-link">
               <i class="fa-brands fa-facebook"></i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link" target="_blank">
+            <a href="#" class="social-link">
               <i class="fa-brands fa-instagram"></i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link" target="_blank">
+            <a href="#" class="social-link">
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
           </li>
@@ -382,7 +376,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link" target="_blank">
+            <a href="#" class="social-link">
               <i class="fa-brands fa-whatsapp"></i>
             </a>
           </li>
